# 571_F23

./: LICENSE  README.md
2023-08-23/FirstProject/: firstprogram.cpp
2023-08-23/SecondProject/: add.cpp  mainprog.cpp
2023-08-23/ThirdProject-CMake/: CMakeLists.txt  add.h
2023-08-23/VS_Project/VS_Project/: VS_Project.sln  VS_Project.vcxproj  VS_Project.vcxproj.filters  add.cpp  add.h  mainprog.cpp
2023-08-23/VS_Project/VS_Project/x64/Debug/: VS_Project.exe.recipe  VS_Project.ilk  VS_Project.vcxproj.FileListAbsolute.txt  vc143.idb
2023-08-23/VS_Project/VS_Project/x64/Debug/VS_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VS_Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2023-08-30/Factorial1/: CMakeLists.txt  factorial.cpp
2023-08-30/Factorial2/: CMakeLists.txt  factorial.cpp  factorial.h  testfactorial.cpp
2023-08-30/StringEncryption/: CMakeLists.txt  stringcrypt.cpp  stringcrypt.h  teststringcrypt.cpp
2023-09-06/ChangeStaticConst/: changecont.cpp
2023-09-06/NonVirtualDestructor/: nonvertdtor.cpp
2023-09-06/RVO/: rvo.cpp
2023-09-06/StringSearch/: stringsearch.h  usestrsrch.cpp
2023-09-13/FragileBaseClass/: base.cpp  base.h  testderived.cpp
2023-09-20/BrittleCounterBar/: bar.h  counter.h
